ContentService/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: content-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: contentservice
  template:
    metadata:
      labels:
        app: contentservice
    spec:
      containers:
      - name: contentservice
        image: anwarict/redcontent
        ports:
        - containerPort: 5117
