ContentService/postgres-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-content-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: contentservice
  template:
    metadata:
      labels:
        app: contentservice
    spec:
      containers:
        - name: postgres-content
          image: postgres:latest
          ports:
            - containerPort: 5432
          volumeMounts:
          - name: postgres-storage
            mountPath: /var/lib/postgresql/data
      volumes:
      - name: postgres-storage
        persistentVolumeClaim:
          claimName: postgres-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-content
spec:
  selector:
    app: contentservice
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
