ContentService/service.yml
apiVersion: v1
kind: Service
metadata:
  name: content-service
spec:
  selector:
    app: contentservice
  ports:
    - protocol: TCP
      port: 5117
      targetPort: 80
      name: http-port
    - protocol: TCP
      port: 7117
      targetPort: 443
      name: https-port
    - protocol: TCP
      port: 5432
      targetPort: 5432
      name: postgres-service-content
  type: ClusterIP
