ContentService/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
spec:
  rules:
  - http:
      paths:
      - path: /api/contents
        pathType: Prefix
        backend:
          service:
            name: content-service
            port:
              number: 5117
      - path: /api/user
        pathType: Prefix
        backend:
          service:
            name: user-service
            port:
              number: 5118
